--- a/styles.css
+++ b/styles.css
@@ -62,14 +62,26 @@ a:hover {
     justify-content: center;
 }
 
+#loader video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fade-out-video {
+    opacity: 0;
+    transition: opacity 0.5s ease; /* Tiempo de transición para el video */
+}
+
+
 #loader img {
     width: 120px;
     height: 120px;
-    animation: spin 3s linear infinite;
+    animation: spin 2s linear infinite; /* Añade la animación de giro */
 }
 
 @keyframes spin {
-    0% { transform: rotate(-40deg); }
+    0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
 
